# HTTPServer

./: .gitignore  CMakeLists.txt  README.md  main.c  request-examples.txt
config/mimetypes/: application.csv
content/: content.html  index.html
files/: files.c  files.h
logging/: logging.c  logging.h
network/: address.c  address.h
network/dialog/: requests.c  requests.h  response.c  response.h
requests/: requests.c  requests.h
util/: date.c  date.h  math.c  math.h
util/date/: hashmap.c  hashmap.h
